2008-09-23  Sven Herzberg  <sven@imendio.com>

	Add GTest support to the build system

	* Makefile.decl: file copied and adjusted to the project needs
	* Makefile.am,
	* demos/Makefile.am,
	* engine/Makefile.am,
	* protocol/Makefile.am,
	* server/Makefile.am: include Makefile.decl to support gtest
	everywhere

2008-09-23  Sven Herzberg  <sven@imendio.com>

	Fix a possible double-free intorduced by r15921

	* server/sapwood-server.c (process_buffer): drop the g_free() call on
	the node; the g_hash_table_remove() will care about this

2008-09-03  Sven Herzberg  <sven@imendio.com>

	added missing files

	* protocol/Makefile.am,
	* protocol/sapwood-proto.c,
	* protocol/sapwood-proto.h,
	* server/Makefile.am,
	* server/sapwood-server.c: added missing files

2008-09-03  Sven Herzberg  <sven@imendio.com>

	Split the code into server, protocol and engine parts
	based on a patch by Christian Dywan

	* engine/Makefile.am,
	* engine/abicheck.sh,
	* engine/sapwood-main.c
	* engine/sapwood-pixmap.c
	* engine/sapwood-pixmap.h,
	* engine/sapwood-proto.c,
	* engine/sapwood-proto.h,
	* engine/sapwood-rc-style.c
	* engine/sapwood-rc-style.h,
	* engine/sapwood-server.c,
	* engine/sapwood-style.c
	* engine/sapwood-style.h,
	* engine/theme-pixbuf.c
	* engine/theme-pixbuf.h,
	* src/Makefile.am,
	* src/abicheck.sh,
	* src/sapwood-main.c,
	* src/sapwood-pixmap.c,
	* src/sapwood-pixmap.h,
	* src/sapwood-proto.c,
	* src/sapwood-proto.h,
	* src/sapwood-rc-style.c,
	* src/sapwood-rc-style.h,
	* src/sapwood-server.c,
	* src/sapwood-style.c,
	* src/sapwood-style.h,
	* src/theme-pixbuf.c,
	* src/theme-pixbuf.h: split successful

2008-09-03  Sven Herzberg  <sven@imendio.com>

	Fix warnings in sapwood server
	patch from Christian Dywan

	* src/sapwood-proto.h: use a gchar[] for the filename

2008-09-03  Sven Herzberg  <sven@imendio.com>

	Use G_DEFINE_DYNAMIC_TYPE
	patch from Christian Dywan

	* src/sapwood-main.c,
	* src/sapwood-rc-style.c,
	* src/sapwood-rc-style.h,
	* src/sapwood-style.c,