@@ -1,6 +1,11 @@
 include $(top_srcdir)/Makefile.decl
 
-SUBDIRS = protocol engine server demos
+SUBDIRS=\
+	protocol \
+	engine \
+	server \
+	tests \
+	demos
 
 MAINTAINERCLEANFILES = Makefile.in aclocal.m4 compile config.guess config.sub \
 		       configure depcomp install-sh ltmain.sh missing \
