@@ -1,0 +1,3 @@
+include $(top_srcdir)/Makefile.decl
+
+
